--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,9 @@
+//Colors
 $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
+$colour-lightgray: #F6F6F6;
+$colour-gray: #EAEAEA;
+$colour-darkgray: #353535;
+
+//Breakpoints
