--- a/css/main.css
+++ b/css/main.css
@@ -14,4 +14,73 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+}
+
+section {
+  padding: 20px;
+  width: calc(100% - 40px);
+}
+section.lightgray {
+  background-color: #F6F6F6;
+}
+section > h2 {
+  font-family: "Roboto", sans-serif;
+}
+
+.card {
+  display: block;
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  color: black;
+  background: white;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+  text-decoration: none;
+  border-radius: 15px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.05);
+}
+.card:visited {
+  color: black;
+}
+.card > .new {
+  position: absolute;
+  z-index: 2;
+  top: 12px;
+  right: 12px;
+}
+.card > img {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  aspect-ratio: 16/9;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px 15px 0 0;
+}
+.card > .description {
+  display: -ms-flexbox;
+  display: flex;
+}
+.card > .description > .description-info {
+  margin: 0 15px;
+  line-height: 10px;
+}
+.card > .description > .description-info > h3 {
+  font-family: "Roboto", sans-serif;
+}
+
+.new {
+  display: block;
+  padding: 7px 15px;
+  font-size: 14px;
+  font-style: normal;
+  border-radius: 2px;
+  color: #278870;
+  background-color: #99E2D0;
+}
+
+.like > i {
+  font-size: 25px;
+  transform: scale(0.9, 1);
 }/*# sourceMappingURL=main.css.map */
