--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@-webkit-keyframes like {
+  0% {
+    background-position: top;
+    transform: scale(0.9, 1);
+  }
+  50% {
+    transform: scale(1.2, 1.3);
+  }
+  100% {
+    background-position: bottom;
+    transform: scale(0.9, 1);
+  }
+}
+@keyframes like {
+  0% {
+    background-position: top;
+    transform: scale(0.9, 1);
+  }
+  50% {
+    transform: scale(1.2, 1.3);
+  }
+  100% {
+    background-position: bottom;
+    transform: scale(0.9, 1);
+  }
+}
 h1,
 h2,
 h3,
@@ -53,7 +79,7 @@ section > h2 {
   position: relative;
   z-index: 1;
   width: 100%;
-  aspect-ratio: 16/9;
+  aspect-ratio: 16/8;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px 15px 0 0;
@@ -61,13 +87,18 @@ section > h2 {
 .card > .description {
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 .card > .description > .description-info {
-  margin: 0 15px;
+  margin: 5px 15px 0 15px;
   line-height: 10px;
 }
 .card > .description > .description-info > h3 {
   font-family: "Roboto", sans-serif;
+}
+.card > .description > .description-like {
+  margin: 20px 20px 0 0;
 }
 
 .new {
@@ -80,7 +111,33 @@ section > h2 {
   background-color: #99E2D0;
 }
 
+.like {
+  display: block;
+  position: relative;
+  width: 25px;
+  height: 25px;
+}
 .like > i {
+  position: absolute;
   font-size: 25px;
   transform: scale(0.9, 1);
+}
+.like > i:last-child {
+  display: none;
+  background: linear-gradient(180deg, white 0%, white 50%, #FF79DA 50%, #9356DC 100%);
+  background-size: 100% 200%;
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: transparent;
+  -webkit-animation: like ease-in-out 0.3s both;
+          animation: like ease-in-out 0.3s both;
+}
+.like > i:first-child {
+  display: block;
+}
+.like:hover i:first-child {
+  display: none;
+}
+.like:hover i:last-child {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
