--- a/sass/components/_like.scss
+++ b/sass/components/_like.scss
@@ -1,6 +1,33 @@
 .like {
+    display: block;
+    position: relative;
+    width: 25px;
+    height: 25px;
+
     &>i {
+        position: absolute;
         font-size: 25px;
         transform: scale(0.9, 1);
+    }
+
+    &>i:last-child {
+        display: none;
+        background: linear-gradient(180deg, white 0%, white 50%, $colour-secondary 50%, $colour-primary 100%);
+        background-size: 100% 200%;
+        background-clip: text;
+        color: transparent;
+        animation: like ease-in-out 0.3s both;
+    }
+
+    &>i:first-child {
+        display: block;
+    }
+
+    &:hover i:first-child {
+        display: none;
+    }
+
+    &:hover i:last-child {
+        display: block;
     }
 }
