CSS Ajout du footer et du header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,10 @@
 //Pages
 @import "./pages/index";
 
+//Layouts
+@import "./layout/footer";
+@import "./layout/header";
+
 //Components
 @import "./components/cards";
 @import "./components/new";
