--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,51 @@ section > h2 {
   font-family: "Roboto", sans-serif;
 }
 
+footer {
+  background: #353535;
+  padding: 5px 25px;
+}
+footer > h2 {
+  font-weight: 500;
+  font-size: 20px;
+}
+footer > h2 > a {
+  color: white;
+  text-decoration: none;
+}
+footer > h2 > a:hover {
+  color: #99E2D0;
+}
+footer > ul {
+  padding: 0;
+  list-style: none;
+  line-height: 25px;
+}
+footer > ul > li > a {
+  color: white;
+  text-decoration: none;
+}
+footer > ul > li > a:hover {
+  color: #99E2D0;
+}
+footer > ul > li > a > i {
+  margin-right: 10px;
+}
+
+header {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: space-evenly;
+      justify-content: space-evenly;
+  -ms-flex-align: center;
+      align-items: center;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.05);
+  height: 70px;
+}
+header > a > img {
+  transform: scale(0.85);
+}
+
 .card {
   display: block;
   position: relative;
