--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -6,6 +6,21 @@ section {
         background-color: $colour-lightgray;
     }
 
+    &.reservation {
+        text-align: center;
+        padding-bottom: 50px;
+
+        &>h1 {
+            @include roboto;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        &>p {
+            font-size: 18px;
+        }
+    }
+
     &.gray {
         position: relative;
         z-index: 0;
