--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,8 +2,9 @@
 $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
-$colour-lightgray: #F6F6F6;
-$colour-gray: #EAEAEA;
-$colour-darkgray: #353535;
+$colour-lightgrey: #F6F6F6;
+$colour-grey: #EAEAEA;
+$colour-medgrey: #7E7E7E;
+$colour-darkgrey: #353535;
 
 //Breakpoints
