--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,82 @@
     background-position: left;
   }
 }
+@-webkit-keyframes listitems {
+  from {
+    background-position: 50%;
+  }
+  to {
+    background-position: 0%;
+  }
+}
+@keyframes listitems {
+  from {
+    background-position: 50%;
+  }
+  to {
+    background-position: 0%;
+  }
+}
+@-webkit-keyframes loadingscreen {
+  0% {
+    opacity: 1;
+    height: 100%;
+  }
+  90% {
+    opacity: 1;
+    height: 100%;
+  }
+  100% {
+    opacity: 0;
+    height: 0%;
+  }
+}
+@keyframes loadingscreen {
+  0% {
+    opacity: 1;
+    height: 100%;
+  }
+  90% {
+    opacity: 1;
+    height: 100%;
+  }
+  100% {
+    opacity: 0;
+    height: 0%;
+  }
+}
+@-webkit-keyframes loader {
+  from {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  to {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+@keyframes loader {
+  from {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  to {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
 h1,
 h2,
 h3,
@@ -72,13 +148,50 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+}
+
+.loadingscreen {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  -webkit-animation: loadingscreen 3s ease-out forwards;
+          animation: loadingscreen 3s ease-out forwards;
+}
+.loadingscreen > .loader {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loadingscreen > .loader > div {
+  position: absolute;
+  border: 5px solid #6c27be;
+  opacity: 1;
+  border-radius: 50%;
+  -webkit-animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+          animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.loadingscreen > .loader > div:nth-child(2) {
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
 }
 
 section {
   padding: 20px;
   width: calc(100% - 40px);
 }
-section.lightgray {
+section.lightgrey {
   background-color: #F6F6F6;
 }
 section.reservation {
@@ -93,15 +206,68 @@ section.reservation > h1 {
 section.reservation > p {
   font-size: 18px;
 }
-section.gray {
+section > .tuto-list {
+  padding: 0;
+  width: 100%;
+  font-weight: bold;
+  text-align: left;
+  list-style: none;
+  counter-reset: list;
+}
+section > .tuto-list > li {
+  position: relative;
+  display: block;
+  height: 70px;
+  margin-left: 10px;
+  margin-bottom: 25px;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+  counter-increment: list;
+  cursor: pointer;
+  background: white;
+  background: radial-gradient(circle, white 0%, white 40%, #f2eafb 50%, #f2eafb 100%);
+  background-size: 400%;
+  background-position: 50%;
+}
+section > .tuto-list > li::before {
+  display: block;
+  position: relative;
+  top: 22px;
+  left: -10px;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  background: #9356DC;
+  border-radius: 20px;
+  content: counter(list);
+  color: white;
+  font-weight: lighter;
+}
+section > .tuto-list > li > i {
+  margin: 0 20px 0 40px;
+  color: #7E7E7E;
+}
+section > .tuto-list > li:hover {
+  -webkit-animation: listitems 0.4s ease-in-out forwards;
+          animation: listitems 0.4s ease-in-out forwards;
+}
+section > .tuto-list > li:hover > i {
+  color: #9356DC;
+}
+section.grey {
   position: relative;
   z-index: 0;
   background: #EAEAEA;
   text-align: center;
+}
+section.grey > h2 {
+  font-size: 16px;
   color: #353535;
   font-weight: bold;
+  margin: 0;
 }
-section.gray > i {
+section.grey > h2 > i {
   margin-right: 10px;
 }
 section > h2 {
@@ -202,6 +368,15 @@ header > a > img {
 .card > .description > .description-like {
   margin: 20px 20px 0 0;
 }
+.card > .description > .cardlink {
+  display: block;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  top: 0;
+}
 
 .new {
   display: block;
@@ -216,6 +391,7 @@ header > a > img {
 .like {
   display: block;
   position: relative;
+  z-index: 3;
   width: 25px;
   height: 25px;
 }
