--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -11,7 +11,6 @@
     @include all-round-little;
     @include drop-shadow-big;
 
-
     &:visited {
         color: black;
     }
@@ -49,6 +48,16 @@
 
         &>.description-like {
             margin: 20px 20px 0 0;
+        }
+
+        &>.cardlink {
+            display: block;
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            @include all-round-little;
+            top: 0;
         }
     }
 }
