--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,9 +1,41 @@
+.loadingscreen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background: rgba(white, 0.5);
+    backdrop-filter: blur(10px);
+    animation: loadingscreen 3s ease-out forwards;
+
+    &>.loader {
+        display: inline-block;
+        position: relative;
+        width: 80px;
+        height: 80px;
+
+        &>div {
+            position: absolute;
+            border: 5px solid darken($colour-primary, 15);
+            opacity: 1;
+            border-radius: 50%;
+            animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+        }
+
+        &>div:nth-child(2) {
+            animation-delay: -0.5s;
+        }
+    }
+}
+
 section {
     padding: 20px;
     width: calc(100% - 40px);
 
-    &.lightgray {
-        background-color: $colour-lightgray;
+    &.lightgrey {
+        background-color: $colour-lightgrey;
     }
 
     &.reservation {
@@ -21,16 +53,75 @@ section {
         }
     }
 
-    &.gray {
+    &>.tuto-list {
+        padding: 0;
+        width: 100%;
+        font-weight: bold;
+        text-align: left;
+        list-style: none;
+        counter-reset: list;
+
+        &>li {
+            position: relative;
+            display: block;
+            height: 70px;
+            margin-left: 10px;
+            margin-bottom: 25px;
+            @include all-round-medium;
+            @include drop-shadow-big;
+            counter-increment: list;
+            cursor: pointer;
+            background: white;
+            background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 40%, rgba(242, 234, 251, 1) 50%, rgba(242, 234, 251, 1) 100%);
+            background-size: 400%;
+            background-position: 50%;
+
+            &::before {
+                display: block;
+                position: relative;
+                top: 22px;
+                left: -10px;
+                width: 25px;
+                height: 25px;
+                line-height: 25px;
+                text-align: center;
+                background: $colour-primary;
+                @include all-round-medium;
+                content: counter(list);
+                color: white;
+                font-weight: lighter;
+            }
+
+            &>i {
+                margin: 0 20px 0 40px;
+                color: $colour-medgrey;
+            }
+
+            &:hover {
+                animation: listitems 0.4s ease-in-out forwards;
+
+                &>i {
+                    color: $colour-primary;
+                }
+            }
+        }
+    }
+
+    &.grey {
         position: relative;
         z-index: 0;
-        background: $colour-gray;
+        background: $colour-grey;
         text-align: center;
-        color: $colour-darkgray;
-        font-weight: bold;
 
-        &>i {
-            margin-right: 10px;
+        &>h2 {
+            font-size: 16px;
+            color: $colour-darkgrey;
+            font-weight: bold;
+            margin: 0;
+
+            &>i {
+                margin-right: 10px;
+            }
         }
     }
 
