CSS Finalisation des styles de la page d'accueil

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,4 +1,13 @@
 .card {
+
+    @media (min-width: $tablets) {
+        max-width: 32.6%;
+    }
+
+    @media (min-width: $desktops) {
+        max-width: 24.4%;
+    }
+
     display: block;
     position: relative;
     z-index: 0;
