--- a/css/main.css
+++ b/css/main.css
@@ -29,33 +29,41 @@
 @-webkit-keyframes buttonin {
   from {
     background-position: left;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
   }
   to {
     background-position: right;
+    box-shadow: 0 5px 10px 0 rgba(255, 121, 218, 0.8);
   }
 }
 @keyframes buttonin {
   from {
     background-position: left;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
   }
   to {
     background-position: right;
+    box-shadow: 0 5px 10px 0 rgba(255, 121, 218, 0.8);
   }
 }
 @-webkit-keyframes buttonout {
   from {
     background-position: right;
+    box-shadow: 0 5px 10px 0 rgba(255, 121, 218, 0.8);
   }
   to {
     background-position: left;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
   }
 }
 @keyframes buttonout {
   from {
     background-position: right;
+    box-shadow: 0 5px 10px 0 rgba(255, 121, 218, 0.8);
   }
   to {
     background-position: left;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
   }
 }
 @-webkit-keyframes listitems {
@@ -77,29 +85,29 @@
 @-webkit-keyframes loadingscreen {
   0% {
     opacity: 1;
-    height: 100%;
+    transform: translate3d(0, 0, 0);
   }
   90% {
     opacity: 1;
-    height: 100%;
+    transform: translate3d(0, 0, 0);
   }
   100% {
     opacity: 0;
-    height: 0%;
+    transform: translate3d(0, -100%, 0);
   }
 }
 @keyframes loadingscreen {
   0% {
     opacity: 1;
-    height: 100%;
+    transform: translate3d(0, 0, 0);
   }
   90% {
     opacity: 1;
-    height: 100%;
+    transform: translate3d(0, 0, 0);
   }
   100% {
     opacity: 0;
-    height: 0%;
+    transform: translate3d(0, -100%, 0);
   }
 }
 @-webkit-keyframes loader {
@@ -149,6 +157,15 @@ html {
   padding: 0;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
+  background: #F6F6F6;
+}
+
+body {
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -ms-flex-direction: column;
+      flex-direction: column;
 }
 
 .loadingscreen {
@@ -162,11 +179,9 @@ html {
   z-index: 1000;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
-  -webkit-animation: loadingscreen 3s ease-out forwards;
-          animation: loadingscreen 3s ease-out forwards;
+  background: rgba(255, 255, 255, 0.8);
+  -webkit-animation: loadingscreen 2s ease-out forwards;
+          animation: loadingscreen 2s ease-out forwards;
 }
 .loadingscreen > .loader {
   display: inline-block;
@@ -191,8 +206,8 @@ section {
   padding: 20px;
   width: calc(100% - 40px);
 }
-section.lightgrey {
-  background-color: #F6F6F6;
+section.white {
+  background-color: white;
 }
 section.reservation {
   text-align: center;
@@ -214,6 +229,16 @@ section > .tuto-list {
   list-style: none;
   counter-reset: list;
 }
+@media (min-width: 768px) {
+  section > .tuto-list {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 section > .tuto-list > li {
   position: relative;
   display: block;
@@ -228,6 +253,12 @@ section > .tuto-list > li {
   background: radial-gradient(circle, white 0%, white 40%, #f2eafb 50%, #f2eafb 100%);
   background-size: 400%;
   background-position: 50%;
+}
+@media (min-width: 768px) {
+  section > .tuto-list > li {
+    padding-right: 30px;
+    margin: 10px 40px;
+  }
 }
 section > .tuto-list > li::before {
   display: block;
@@ -247,6 +278,11 @@ section > .tuto-list > li::before {
 section > .tuto-list > li > i {
   margin: 0 20px 0 40px;
   color: #7E7E7E;
+}
+@media (max-width: 300px) {
+  section > .tuto-list > li > i {
+    margin: 0 5px 0 20px;
+  }
 }
 section > .tuto-list > li:hover {
   -webkit-animation: listitems 0.4s ease-in-out forwards;
@@ -274,9 +310,21 @@ section > h2 {
   font-family: "Roboto", sans-serif;
 }
 
+@media (min-width: 768px) {
+  .restaurants {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 footer {
   background: #353535;
   padding: 5px 25px;
+  margin-top: auto;
 }
 footer > h2 {
   font-weight: 500;
@@ -333,6 +381,16 @@ header > a > img {
   text-decoration: none;
   border-radius: 15px;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+}
+@media (min-width: 768px) {
+  .card {
+    max-width: 32.6%;
+  }
+}
+@media (min-width: 992px) {
+  .card {
+    max-width: 24.4%;
+  }
 }
 .card:visited {
   color: black;
@@ -425,16 +483,16 @@ header > a > img {
   text-decoration: none;
   color: white;
   background: linear-gradient(-5deg, #FF79DA 0%, #9356DC 85%, #FF79DA 100%);
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-animation: buttonout 0.3s ease-in-out backwards;
+          animation: buttonout 0.3s ease-in-out backwards;
   background-size: 2000%;
-  -webkit-animation: buttonout 0.8s ease-in-out backwards;
-          animation: buttonout 0.8s ease-in-out backwards;
 }
 .button:hover {
-  -webkit-animation: buttonin 0.8s ease-in-out forwards;
-          animation: buttonin 0.8s ease-in-out forwards;
+  -webkit-animation: buttonin 0.4s ease-in-out forwards;
+          animation: buttonin 0.4s ease-in-out forwards;
 }
 .button.big {
   padding: 15px;
   border-radius: 100px;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
 }/*# sourceMappingURL=main.css.map */
