--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -13,4 +13,11 @@ html {
     padding: 0;
     @include roboto;
     scroll-behavior: smooth;
+    background: $colour-lightgrey;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
