--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -6,9 +6,9 @@
     z-index: 1000;
     width: 100%;
     height: 100%;
-    background: rgba(white, 0.5);
-    backdrop-filter: blur(10px);
-    animation: loadingscreen 3s ease-out forwards;
+    background: rgba(white, 0.8);
+    //backdrop-filter: blur(10px);
+    animation: loadingscreen 2s ease-out forwards;
 
     &>.loader {
         display: inline-block;
@@ -34,8 +34,8 @@ section {
     padding: 20px;
     width: calc(100% - 40px);
 
-    &.lightgrey {
-        background-color: $colour-lightgrey;
+    &.white {
+        background-color: white;
     }
 
     &.reservation {
@@ -61,6 +61,12 @@ section {
         list-style: none;
         counter-reset: list;
 
+        @media (min-width: $tablets) {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
         &>li {
             position: relative;
             display: block;
@@ -75,6 +81,11 @@ section {
             background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 40%, rgba(242, 234, 251, 1) 50%, rgba(242, 234, 251, 1) 100%);
             background-size: 400%;
             background-position: 50%;
+
+            @media (min-width: $tablets) {
+                padding-right: 30px;
+                margin: 10px 40px;
+            }
 
             &::before {
                 display: block;
@@ -95,6 +106,10 @@ section {
             &>i {
                 margin: 0 20px 0 40px;
                 color: $colour-medgrey;
+
+                @media (max-width: $micro) {
+                    margin: 0 5px 0 20px;
+                }
             }
 
             &:hover {
@@ -127,5 +142,13 @@ section {
 
     &>h2 {
         @include roboto;
+    }
+}
+
+.restaurants {
+    @media (min-width: $tablets) {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 }
