--- a/css/main.css
+++ b/css/main.css
@@ -321,11 +321,39 @@ section > h2 {
   }
 }
 
+.menu-main {
+  position: relative;
+}
 .menu-main > img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   max-height: 275px;
+}
+
+.menu-form {
+  position: relative;
+  width: 100%;
+  background: #F6F6F6;
+  margin-top: -40px;
+  padding-top: 10px;
+  border-radius: 40px 40px 0 0;
+}
+.menu-form > h2 {
+  margin-left: 20px;
+  font-weight: 200;
+  font-size: 28px;
+}
+.menu-form > .menu-like {
+  display: inline-block;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+@media (max-width: 300px) {
+  .menu-form > .menu-like {
+    right: 20px;
+  }
 }
 
 footer {
