--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -22,6 +22,23 @@
         font-size: 28px;
     }
 
+    &>h3 {
+        margin-left: 20px;
+        @include roboto;
+        font-weight: 200;
+        font-size: 16px;
+        text-transform: uppercase;
+
+        &::after {
+            content: "";
+            display: block;
+            width: 35px;
+            height: 3px;
+            margin-top: 3px;
+            background: $colour-tertiary;
+        }
+    }
+
     &>.menu-like {
         display: inline-block;
         position: absolute;
