--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -21,32 +21,117 @@
         font-weight: 200;
         font-size: 28px;
     }
+}
 
-    &>h3 {
-        margin-left: 20px;
-        @include roboto;
-        font-weight: 200;
-        font-size: 16px;
-        text-transform: uppercase;
+.menu-like {
+    display: inline-block;
+    position: absolute;
+    top: 40px;
+    right: 40px;
 
-        &::after {
-            content: "";
-            display: block;
-            width: 35px;
-            height: 3px;
-            margin-top: 3px;
-            background: $colour-tertiary;
+    @media (max-width: $micro) {
+        right: 20px;
+    }
+}
+
+.menu-form__nav {
+    &>div {
+        &>h3 {
+            margin: 30px 0 15px 20px;
+            @include roboto;
+            font-weight: 200;
+            font-size: 16px;
+            text-transform: uppercase;
+
+            &::after {
+                content: "";
+                display: block;
+                width: 35px;
+                height: 3px;
+                margin-top: 3px;
+                background: $colour-tertiary;
+            }
+        }
+
+        &>span {
+            opacity: 0;
+
+            @for $i from 1 through 5 {
+                &:nth-child(#{$i}) {
+                    animation: showitems 0.2s #{$i * .3}s ease-in forwards;
+                }
+            }
+        }
+    }
+}
+
+.menu-item {
+    position: relative;
+    display: flex;
+    background: white;
+    margin: 0 15px 10px 15px;
+    padding: 10px;
+    height: 45px;
+    @include all-round-little;
+    @include drop-shadow-big;
+    cursor: pointer;
+
+    &>div:first-child {
+        width: 100%;
+        min-width: 0;
+
+        &>h4 {
+            @include roboto;
+            font-size: 18px;
+            margin: 0;
+            @include overflow-ellipsis;
+        }
+
+        &>p {
+            font-size: 14px;
+            margin: 5px 0 0 0;
+            @include overflow-ellipsis;
         }
     }
 
-    &>.menu-like {
-        display: inline-block;
-        position: absolute;
-        top: 40px;
-        right: 40px;
+    &>div:last-child {
+        display: block;
+        margin: -10px -10px -10px 10px;
+        @include round-right-little;
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        overflow: hidden;
 
-        @media (max-width: $micro) {
-            right: 20px;
+        &>em {
+            margin: 0 20px 10px 0;
+            font-size: 14px;
+            font-weight: bold;
+            font-style: normal;
+            align-self: flex-end;
+        }
+
+        &>span {
+            display: block;
+            width: 0;
+            background: $colour-tertiary;
+            color: white;
+            text-align: center;
+            font-size: 20px;
+            line-height: 65px;
+            animation: checkhide 0.4s ease-in-out forwards;
+
+            &>i {
+                transform: rotate(0deg);
+            }
+        }
+    }
+
+    &:hover>div:last-child>span {
+        animation: checkshow 0.4s ease-in-out forwards;
+
+        &>i {
+            animation: checkrotate 0.4s ease-in-out forwards;
         }
     }
 }
