--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -62,6 +62,22 @@
                 }
             }
         }
+
+
+        @media (min-width: $tablets) {
+            width: 48%;
+        }
+
+        @media (min-width: $desktops) {
+            width: 33%;
+        }
+    }
+
+    @media (min-width: $tablets) {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 }
 
