--- a/css/main.css
+++ b/css/main.css
@@ -749,6 +749,7 @@ header > .back-btn:hover {
 }
 .button.order {
   display: block;
+  cursor: pointer;
   text-align: center;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
