--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -18,6 +18,7 @@
 
     &.order {
         display: block;
+        cursor: pointer;
         text-align: center;
         font-size: 16px;
         @include roboto;
