--- a/sass/components/_like.scss
+++ b/sass/components/_like.scss
@@ -15,6 +15,7 @@
             background: linear-gradient(180deg, white 0%, white 50%, $colour-secondary 50%, $colour-primary 100%);
             background-size: 100% 200%;
             background-clip: text;
+            -webkit-background-clip: text;
             color: transparent;
             animation: like ease-in-out 0.3s both;
         }
