--- a/sass/components/_like.scss
+++ b/sass/components/_like.scss
@@ -16,7 +16,8 @@
             background-size: 100% 200%;
             background-clip: text;
             -webkit-background-clip: text;
-            color: transparent;
+            -webkit-text-fill-color: transparent;
+            color: $colour-primary;
             animation: like ease-in-out 0.3s both;
         }
 
