Correction affichage des cartes sur safari

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -146,9 +146,8 @@ section {
 }
 
 .restaurants {
-    @media (min-width: $tablets) {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
