--- a/css/main.css
+++ b/css/main.css
@@ -261,12 +261,11 @@ section > h2 {
   font-family: "Roboto", sans-serif;
 }
 
-@media (min-width: 768px) {
-  .restaurants {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
+.restaurants {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .menu-main {
@@ -481,8 +480,9 @@ header > .back-btn:hover {
 .card {
   display: block;
   position: relative;
-  z-index: 0;
+  height: 260px;
   width: 100%;
+  z-index: 0;
   color: black;
   background: white;
   margin-bottom: 20px;
@@ -493,12 +493,12 @@ header > .back-btn:hover {
 }
 @media (min-width: 768px) {
   .card {
-    max-width: 32.6%;
+    width: 32.6%;
   }
 }
 @media (min-width: 992px) {
   .card {
-    max-width: 24.4%;
+    width: 24.4%;
   }
 }
 .card:visited {
@@ -514,7 +514,7 @@ header > .back-btn:hover {
   position: relative;
   z-index: 1;
   width: 100%;
-  aspect-ratio: 16/8;
+  height: 180px;
   object-fit: cover;
   border-radius: 15px 15px 0 0;
 }
