--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,17 +1,9 @@
 .card {
-
-    @media (min-width: $tablets) {
-        max-width: 32.6%;
-    }
-
-    @media (min-width: $desktops) {
-        max-width: 24.4%;
-    }
-
     display: block;
     position: relative;
-    z-index: 0;
+    height: 260px;
     width: 100%;
+    z-index: 0;
     color: black;
     background: white;
     margin-bottom: 20px;
@@ -19,6 +11,14 @@
     text-decoration: none;
     @include all-round-little;
     @include drop-shadow-big;
+
+    @media (min-width: $tablets) {
+        width: 32.6%;
+    }
+
+    @media (min-width: $desktops) {
+        width: 24.4%;
+    }
 
     &:visited {
         color: black;
@@ -36,7 +36,7 @@
         position: relative;
         z-index: 1;
         width: 100%;
-        aspect-ratio: 16/8;
+        height: 180px;
         object-fit: cover;
         @include round-top-little;
     }
