--- a/css/main.css
+++ b/css/main.css
@@ -137,8 +137,9 @@ body {
   z-index: 1000;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.8);
-  animation: loadingscreen 2s ease-out forwards;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  animation: loadingscreen 2s ease-in forwards;
 }
 .loadingscreen > .loader {
   display: inline-block;
