--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -6,9 +6,9 @@
     z-index: 1000;
     width: 100%;
     height: 100%;
-    background: rgba(white, 0.8);
-    //backdrop-filter: blur(10px);
-    animation: loadingscreen 2s ease-out forwards;
+    background: rgba(white, 0.2);
+    backdrop-filter: blur(10px);
+    animation: loadingscreen 2s ease-in forwards;
 
     &>.loader {
         display: inline-block;
