--- a/css/main.css
+++ b/css/main.css
@@ -318,22 +318,22 @@ section > h2 {
   margin-top: 3px;
   background: #99E2D0;
 }
-.menu-form__nav > div > span {
+.menu-form__nav > div > div {
   opacity: 0;
 }
-.menu-form__nav > div > span:nth-child(1) {
+.menu-form__nav > div > div:nth-child(1) {
   animation: showitems 0.2s 0.3s ease-in forwards;
 }
-.menu-form__nav > div > span:nth-child(2) {
+.menu-form__nav > div > div:nth-child(2) {
   animation: showitems 0.2s 0.6s ease-in forwards;
 }
-.menu-form__nav > div > span:nth-child(3) {
+.menu-form__nav > div > div:nth-child(3) {
   animation: showitems 0.2s 0.9s ease-in forwards;
 }
-.menu-form__nav > div > span:nth-child(4) {
+.menu-form__nav > div > div:nth-child(4) {
   animation: showitems 0.2s 1.2s ease-in forwards;
 }
-.menu-form__nav > div > span:nth-child(5) {
+.menu-form__nav > div > div:nth-child(5) {
   animation: showitems 0.2s 1.5s ease-in forwards;
 }
 @media (min-width: 768px) {
