--- a/sass/layout/_homepage.scss
+++ b/sass/layout/_homepage.scss
@@ -104,8 +104,8 @@
   }
 
   &__step:hover {
-    background-color:#c99eff;
-    color:#9356DC;
+    background-color: #f3e6ff;
+   
   }
 
   &__steps {
